--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.archivision.slova</groupId>
-    <artifactId>Slova</artifactId>
+    <artifactId>slova</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>theaetetus</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
